Messages flicker when writing multi-line message. Add message timestamps. Fixes #1

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,3 +67,11 @@ a {
 .wrap-anywhere {
   word-wrap: anywhere;
 }
+
+.message ~ .hidden-data {
+  opacity: 0;
+}
+
+.message:hover ~ .hidden-data {
+  opacity: 1;
+}
